tests/ui/regions/region-object-lifetime-5.stderr
error[E0515]: cannot return reference to local data `*x`
  --> $DIR/region-object-lifetime-5.rs:11:5
   |
LL |     x.borrowed()
   |     ^^^^^^^^^^^^ returns a reference to data owned by the current function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0515`.
